--- a/formulas/formulas-3.html
+++ b/formulas/formulas-3.html
@@ -9,13 +9,11 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../tvm-styles.css">
 
-    <title>Time Value of Money - Part 1</title>
+    <title>Time Value of Money - Formulas</title>
 </head>
 
 <body>
     <div class="container-fluid">
-
-
 
         <div id="" class="slide">
             <div class="row slide-title">
@@ -26,15 +24,20 @@
             </div>
             <nav class="row">
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./formulas-1.html">Home</a></div>
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./formulas-help.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="#">Exercises</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h4>Basic TVM Formula: &nbsp;&nbsp; \(FV=PV(1+i)^n\)</h4>
-                        <p>Many textbooks will present you with four different TVM equations; one solving for each variable: FV, PV, i, and n. As a result you have to memorize four equations instead of one. There's an easier route! If you know the general TVM equation and have some basic math skills, you can solve for any of the four variables. We've already solved for Future Value (FV). Now we'll try 3 more example problems, solving for the other 3 variables.</p>
+                        <p>Another way to calculate TVM is with a financial calculator. If you have a financial calculator, now would be a good time to make sure you know how to use it. If you do not have one, feel free to click on the Financial Calculator links and test an online calculator.</p>
+                        <p>Plug in the numbers to verify that the equation and calculator find the same FV using the sample math question we used in the last interaction.</p>
+                        <p class="alert">Note: Your calculator must be on End mode -- this is the most common mistake made on tests. Also, keep in mind that PV is entered as a negative number and interest is entered as a whole number.</p>
+                        <p class="question">How much would $100 grow in 10 years at 10%?</p>
+                        <p class="text-center">
+                            <img src="../images/tvm1_calculator_check_example.png" class="img-fluid" alt="calculator screen 10 years 10% interest 100 present value equals 259.37">
+                        </p>
                     </div>
                 </div>
             </div>
@@ -43,7 +46,6 @@
                     <div class="page-number"></div>
                 </div>
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <!-- needs a help button  -->
                     <a type="button" class="btn" href="formulas-2.html">Back</a>
                     <a type="button" class="btn" href="formulas-4.html">Continue</a>
                 </div>
@@ -64,7 +66,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-    <script src="formulas-script.js"></script>
+    <script src="../script.js"></script>
 </body>
 
 </html>
