--- a/formulas/calc.html
+++ b/formulas/calc.html
@@ -24,8 +24,8 @@
             </div>
             <nav class="row">
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./formulas-1.html">Home</a></div>
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="">Math Help</a></div>
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./formulas-help.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="#">Exercises</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
@@ -55,7 +55,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-    <script src="basics-script.js"></script>
+    <script src="../script.js"></script>
 </body>
 
 </html>
