--- a/formulas/formulas-4.html
+++ b/formulas/formulas-4.html
@@ -9,79 +9,32 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../tvm-styles.css">
 
-    <title>Time Value of Money - Part 1</title>
+    <title>Time Value of Money - Formulas</title>
 </head>
 
 <body>
     <div class="container-fluid">
 
 
+
         <div id="" class="slide">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: Formulas</h2>
-                    <!-- <h3 class="secondary-title">Sample Problems</h3> -->
+                    <!-- <h3 class="secondary-title">TVM Equation</h3> -->
                 </div>
             </div>
             <nav class="row">
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./formulas-1.html">Home</a></div>
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./help/help-index.html">Math Help</a></div>
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./exercises/exerciseIntro-1.html">Exercises</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./formulas-help.html">Math Help</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="#">Exercises</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
             </nav>
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h4>Solve the Equation for Present Value (PV)</h4>
-                        <hr>
-                        <p class="question">How much would you pay today for a promise of $259.37 in 10 years at a discount rate of 10%?</p>
-                        <p class="answer">The answer is $100.</p>
-                        <h5>Steps for solving the sample equation.</h5>
-                        <p>Follow the same pattern we used to solve our first problem.</p>
-                        <ul>
-                            <li>First, identify the variables in the problem.</li>
-                            <ul>
-                                <li>
-                                    This time we’re looking for Present Value (PV), because the question asks how much you would pay today.
-                                    <div><span class="math">\(PV=?\)</span></div>
-                                </li>
-                                <li>
-                                    We know that the $259.37 is the Future Value (FV), because it will be paid in the future.
-                                    <div><span class="math">\(FV=259.37\)</span></div>
-                                </li>
-                                <li>Remember that interest (i) is a percentage or decimal.
-                                    <div><span class="math">\(i=10\%\ or\ 0.10\)</div>
-                                </li>
-                                <li>Time (n) is an expression of time such as years or decades.
-                                    <div><span class="math">\(n=10\)</span></div>
-                                </li>
-                            </ul>
-
-                            <li>
-                                <p>Once you've identified the variables, plug the numbers into the basic equation:
-                                    <div><span class="math">\(FV=PV(1+i)^n\)<br>
-                                            \(259.37=(1+0.10)^{10}\)</span></div>
-                                </p>
-                            </li>
-                            <li>Then solve for the unknown variable. Remember to use the order of operations (PEMDAS).
-                                <ul>
-                                    <li>Add the numbers in the parentheses.<div><span class="math">\(FV=100(1.10)^{10}\)</span></div>
-                                    </li>
-                                    <li>Raise the number in the parentheses to the exponent. Leave enough significant digits so that you don’t commit a rounding error.
-                                        <p><span class="math">\(259.37=PV(2.5937)\)</span></p>
-                                    </li>
-                                    <li>Multiple and Divide: Divide both sides by the same number to isolate PV. Remember to cancel out the fraction.
-                                        <div><span class="math" style="font-size: 1.5em;">\(\frac{259.37}{2.5937}=\frac{PV\cancel{(2.5937)}}{\cancel{2.5937}}\)</span></div>
-                                    </li>
-                                    <li>Adding and Subtracting is not necessary for this problem. The addition in this specific equation was taken care of in the parentheses.</li>
-                                </ul>
-                            </li>
-                            <li>Finally, simplify the fraction to solve for PV.
-                                <div><span class="math" style='font-size: 1.5em;'>\(PV=\frac{259.37}{2.5937}=100\)</span></div>
-                            </li>
-                            </p>
-                        </ul>
-
+                        <h4>Basic TVM Formula: &nbsp;&nbsp; \(FV=PV(1+i)^n\)</h4>
+                        <p>Many textbooks will present you with four different TVM equations; one solving for each variable: FV, PV, i, and n. As a result you have to memorize four equations instead of one. There's an easier route! If you know the general TVM equation and have some basic math skills, you can solve for any of the four variables. We've already solved for Future Value (FV). Now we'll try 3 more example problems, solving for the other 3 variables.</p>
                     </div>
                 </div>
             </div>
@@ -90,6 +43,7 @@
                     <div class="page-number"></div>
                 </div>
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
+                    <!-- needs a help button  -->
                     <a type="button" class="btn" href="formulas-3.html">Back</a>
                     <a type="button" class="btn" href="formulas-5.html">Continue</a>
                 </div>
@@ -110,7 +64,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-    <script src="formulas-script.js"></script>
+    <script src="../script.js"></script>
 </body>
 
 </html>
