--- a/formulas/formulas-7.html
+++ b/formulas/formulas-7.html
@@ -16,7 +16,7 @@
     <div class="container-fluid">
 
 
-        <div id="" class="slide">
+        <div id="" class="slide stop">
             <div class="row slide-title">
                 <div class="col-12">
                     <h2 class="primary-title">TVM: Formulas</h2>
@@ -32,24 +32,43 @@
             <div class="row">
                 <div class="col-12">
                     <div class="content">
-                        <h3>Solve the Equation for Interest (i)</h3>
+                        <h3>Solve the Equation for Time (n)</h3>
                         <hr>
-                        <p class="question">If you need to triple your investment in 10 years, what interest rate will you need?</p>
-                        <p class="answer">The answer is 11.612%.</p>
+                        <p class="question">How many years will it take for you to earn $500 on your $1000 investment if you are guaranteed a 9% rate of return?</p>
+                        <p class="answer">The answer is 4.7 years.</p>
                         <h5>Steps for solving the sample equation.</h5>
-                        <p>Even though not all the numbers are listed in the problem, we can identify the time frame. Identifying FV and PV might be difficult since they aren't explicitly stated, however we know our future value will be 3 times our current value. This means we can use any current value for our calculation. To make it easy, use $1. This means our future value would be $3.</p>
-                        <p>Remember: To find the reciprocal, turn the number into a fraction and then flip it over:
-                            <span class="math" style="font-size: 1.5em;">\(10=\frac{10}{1}\nearrow\frac{1}{10}\)</span>
-                        </p>
                         <ul>
-                            <li>First, identify the variables in the problem. In essence, this question asks how much interest it will take to turn $1 that you have today into $3 in 10 years.
-                                <div><span class="math">\(PV=1\)<br>\(FV=3\)<br>\(i=?\)<br>\(n=10\)</span></div>
+                            <li>First, identify the variables in the problem.
+                                <div>
+                                    <span class="math">\(PV = 1000\)<br>
+                                        \(FV = 1500\)<br>
+                                        \(i = 9%\) or \(0.09\)<br>
+                                        \(n = ?\)</span>
+                                </div>
                             </li>
-                            <li>Next, plug the numbers into the equation:
-                                <div><span class="math">\(FV=PV(1+i)^n\longrightarrow3=1(1+i)^{10}\)</span></div>
+                            <li>Next, plug the numbers you've identified into the equation.
+                                <div><span class="math">\(FV = PV(1 + i)^n\) <b>&nbsp;&xrarr;&nbsp;</b> \(1500=1000(1 + 0.09)^n\)</span></div>
                             </li>
-                            <li>Then solve for the unknown variable, which is interest (i) in this problem.</li>
-                            <p>IMPORTANT: The order of operations still applies to this problem. However, we can’t start as we normally would by adding the numbers in the parentheses, because one is an unknown variable. We also have to skip the exponent until later in the equation, because of the unknown variable. </p>
+
+                            <li>Now solve for the unknown variable. <span class="note">Remember PEMDAS.</span> </li>
+                            <ul>
+                                <li>Add the numbers in the parentheses.<br>
+                                    <span class="math">\(1500 = 1000(1.09)^n\)</span>
+                                </li>
+                                <li>Isolate the parentheses by dividing each side by 1000. Then convert the fraction on the left side of the equal sign to a decimal.
+                                    <div>
+                                        <span class="math" style="font-size: 1.5em;">\(\frac{1500}{1000}=\frac{1000(1+0.09)^n}{1000}\)</span>
+                                    </div>
+                                </li>
+                                <li>Many people will get stuck here. To manipulate an unknown exponent, take the natural log (ln) of each side. ln is a button on your calculator. Pay attention to what happens to the exponent n.
+                                    <div>
+                                        <span class="math">\(ln 1.5 = n(ln 1.09)\)</span>
+                                    </div>
+                                </li>
+                                <li>To isolate n, divide both sides by (ln 1.09). Then solve for n.
+                                    <div><span style="font-size: 1.5em;" class="math">\(n=\frac{0.40546511}{0.08617770}\)</span></div>
+                                </li>
+                            </ul>
                         </ul>
                     </div>
                 </div>
@@ -63,7 +82,10 @@
                     <a type="button" class="btn" href="formulas-7.html">Continue</a>
                 </div>
             </div>
+
         </div>
+
+
 
     </div> <!--  end of container -->
 
