--- a/formulas/formulas-10.html
+++ b/formulas/formulas-10.html
@@ -15,8 +15,8 @@
 <body>
     <div class="container-fluid">
 
+        <!-- problem 8  -->
 
-        <!--  problem 10  -->
         <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
@@ -34,25 +34,24 @@
                 <div class="col-12">
                     <div class="content">
 
-                        <h4>Exercise 12: Identify the Variables</h4>
-                        <p>Solve the TVM equation and enter the value of the unknown variable.</p>
-                        <p class="question">If I know that I want to give my child $20,000 for college on his 18th birthday, how much will I need to invest at 7% when the child is born?</p>
+                        <h4>Exercise 8: Calculate for Time (n)</h4>
+                        <p class="question">At a rate of 12% annual interest, how long would it take for an amount to double?</p>
                         <div class="container">
                             <div class="">
                                 <form action="" class="indent">
-                                    <label> </label>
-                                    <input id="Present Value (PV)alue-ex12" type="number"><br>
-                                    <label> </label>
-                                    <input id="Future Value (FV)alue-ex12" type="number"><br>
+                                    <label>Present Value (PV) </label>
+                                    <input id="Present Value (PV)alue-ex8" type="number"><br>
+                                    <label>Future Value (FV) </label>
+                                    <input id="Future Value (FV)alue-ex8" type="number"><br>
                                     <label>Interest (i)</label>
-                                    <input id="int-ex12" type="number"><br>
-                                    <label>&nbsp;&nbsp; </label>
-                                    <input id="yrs-ex12" type="number"><br>
+                                    <input id="int-ex8" type="number"><br>
+                                    <label>Time (n)</label>
+                                    <input id="yrs-ex8" type="number"><br>
                                 </form>
-                                <button onclick="exercise_12()" type="button" class="btn calculate-btn">Submit</button>
+                                <button onclick="exercise_8()" type="button" class="btn calculate-btn">Submit</button>
                             </div>
                             <br>
-                            <div class="answer" id="answer-ex12"></div>
+                            <div class="answer" id="answer-ex8"></div>
                         </div>
                     </div>
                 </div>
@@ -62,8 +61,8 @@
                     <div class="page-number"></div>
                 </div>
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a href="" type="button" class="btn">Back</a>
-                    <a href="" type="button" class="btn">Continue</a>
+                    <a type="button" class="btn" href="formulas-9.html">Back</a>
+                    <a type="button" class="btn" href="formulas-11.html">Continue</a>
                 </div>
             </div>
 
