--- a/formulas/formulas-11.html
+++ b/formulas/formulas-11.html
@@ -15,8 +15,8 @@
 <body>
     <div class="container-fluid">
 
-        <!--  problem 4 -->
 
+        <!--  problem 10  -->
         <div id="" class="slide exercise-slide">
             <div class="row slide-title">
                 <div class="col-12">
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <nav class="row">
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./../basics-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./formulas-1.html">Home</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./formulas-help.html">Math Help</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="#">Exercises</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
@@ -34,25 +34,24 @@
                 <div class="col-12">
                     <div class="content">
 
-                        <h4>Exercise 4: Identify the Variables</h4>
-                        <p>Enter the value of each variable in the boxes below. Leave the box for the unknown variable blank.</p>
-                        <p class="question">A zero coupon bond pays $1,000 at maturity in 20 years. If the appropriate required return for this level of risky asset is 12%, how much would I be willing to pay for this bond? (assume annual compounding/discounting)</p>
+                        <h4>Exercise 12: Calculate Present Value (PV)</h4>
+                        <p class="question">If I know that I want to give my child $20,000 for college on his 18th birthday, how much will I need to invest at 7% when the child is born?</p>
                         <div class="container">
                             <div class="">
                                 <form action="" class="indent">
-                                    <label>Present Value (PV) </label>
-                                    <input id="Present Value (PV)alue-ex4" type="number"><br>
-                                    <label>Future Value (FV) </label>
-                                    <input id="Future Value (FV)alue-ex4" type="number"><br>
+                                    <label> </label>
+                                    <input id="Present Value (PV)alue-ex12" type="number"><br>
+                                    <label> </label>
+                                    <input id="Future Value (FV)alue-ex12" type="number"><br>
                                     <label>Interest (i)</label>
-                                    <input id="int-ex4" type="number"><br>
-                                    <label>Time (n)</label>
-                                    <input id="yrs-ex4" type="number"><br>
+                                    <input id="int-ex12" type="number"><br>
+                                    <label>&nbsp;&nbsp; </label>
+                                    <input id="yrs-ex12" type="number"><br>
                                 </form>
-                                <button onclick="exercise_4()" type="button" class="btn calculate-btn">Submit</button>
+                                <button onclick="exercise_12()" type="button" class="btn calculate-btn">Submit</button>
                             </div>
                             <br>
-                            <div class="answer" id="answer-ex4"></div>
+                            <div class="answer" id="answer-ex12"></div>
                         </div>
                     </div>
                 </div>
