--- a/formulas/formulas-8.html
+++ b/formulas/formulas-8.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container-fluid">
 
-        <!-- problem 8  -->
+        <!--  problem 4 -->
 
         <div id="" class="slide exercise-slide">
             <div class="row slide-title">
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <nav class="row">
-                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./formulas-1.html">Home</a></div>
+                <div class="col-xs-6 col-sm-3 col-md-3"><a href="./../basics-1.html">Home</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./formulas-help.html">Math Help</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="#">Exercises</a></div>
                 <div class="col-xs-6 col-sm-3 col-md-3"><a href="./calc.html">Financial Calculator</a></div>
@@ -34,25 +34,24 @@
                 <div class="col-12">
                     <div class="content">
 
-                        <h4>Exercise 8: Identify the Variables</h4>
-                        <p>Enter the value of each variable in the boxes below. Leave the unknown variable blank.</p>
-                        <p class="question">At a rate of 12% annual interest, how long would it take for an amount to double?</p>
+                        <h4>Exercise 1: Calculate Present Value (PV)</h4>
+                        <p class="question">A zero coupon bond pays $1,000 at maturity in 20 years. If the appropriate required return for this level of risky asset is 12%, how much would I be willing to pay for this bond? (assume annual compounding/discounting)</p>
                         <div class="container">
                             <div class="">
                                 <form action="" class="indent">
                                     <label>Present Value (PV) </label>
-                                    <input id="Present Value (PV)alue-ex8" type="number"><br>
+                                    <input id="Present Value (PV)alue-ex4" type="number"><br>
                                     <label>Future Value (FV) </label>
-                                    <input id="Future Value (FV)alue-ex8" type="number"><br>
+                                    <input id="Future Value (FV)alue-ex4" type="number"><br>
                                     <label>Interest (i)</label>
-                                    <input id="int-ex8" type="number"><br>
+                                    <input id="int-ex4" type="number"><br>
                                     <label>Time (n)</label>
-                                    <input id="yrs-ex8" type="number"><br>
+                                    <input id="yrs-ex4" type="number"><br>
                                 </form>
-                                <button onclick="exercise_8()" type="button" class="btn calculate-btn">Submit</button>
+                                <button onclick="exercise_4()" type="button" class="btn calculate-btn">Submit</button>
                             </div>
                             <br>
-                            <div class="answer" id="answer-ex8"></div>
+                            <div class="answer" id="answer-ex4"></div>
                         </div>
                     </div>
                 </div>
@@ -62,8 +61,8 @@
                     <div class="page-number"></div>
                 </div>
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a href="" type="button" class="btn">Back</a>
-                    <a href="" type="button" class="btn">Continue</a>
+                    <a type="button" class="btn" href="formulas-7.html">Back</a>
+                    <a type="button" class="btn" href="formulas-9.html">Continue</a>
                 </div>
             </div>
 
