--- a/formulas/formulas-9.html
+++ b/formulas/formulas-9.html
@@ -34,8 +34,7 @@
                 <div class="col-12">
                     <div class="content">
 
-                        <h4>Exercise 6: Identify the Variables</h4>
-                        <p>Enter the value of each variable in the boxes below. Leave the unknown variable blank.</p>
+                        <h4>Exercise 6: Calculate the Interest Rate (i)</h4>
                         <p class="question">What interest rate is required for a deposit to double in 10 years?</p>
                         <div class="container">
                             <div class="">
@@ -62,8 +61,8 @@
                     <div class="page-number"></div>
                 </div>
                 <div class="offset-3 col-4 offset-sm-4 col-sm-7 offset-md-6 col-md-6 offset-lg-7 col-lg-4 offset-xl-7 col-xl-4">
-                    <a href="" type="button" class="btn">Back</a>
-                    <a href="" type="button" class="btn">Continue</a>
+                    <a type="button" class="btn" href="formulas-8.html">Back</a>
+                    <a type="button" class="btn" href="formulas-10.html">Continue</a>
                 </div>
             </div>
 
